Update versioning in index.html to v202412032001; fix CSS syntax in main.css and align header text in controls section

--- a/main.css
+++ b/main.css
@@ -66,8 +66,10 @@ body {
 }
 
 #controls #header p {
-	color: #9ca3af font-size: 1em;
+	color: #9ca3af;
+	font-size: 1em;
 	margin: 10px 0;
+	text-align: right;
 }
 
 .flex-col {
